[Add]fix-header

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,13 +2,16 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <span>ながのCAKE</span>
-      <span>ようこそ<%= "#{current_customer.family_name}" %>さん</span>
+
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
         <% if customer_signed_in? %>
+          <div class="d-flex align-items-center">
+            ようこそ<%= "#{current_customer.family_name}" %>さん
+          </div>
           <li>
             <%= link_to public_mypage_path, class: "nav-link text-light" do %>
               マイページ
