--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -13,7 +13,7 @@
       <tr>
         <th scope="row"><%= customer.id %></th>
         <td>
-          <%= link_to do %>
+          <%= link_to admin_customer_path(customer) do %>
             <%= customer.family_name %>
             <%= customer.first_name %>
           <% end %>
@@ -31,8 +31,3 @@
   <% end %>
   </table>
   <%= paginate @customers %>
-
-
-
-
-
