[注文情報入力画面以外]placeholder

--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -21,7 +21,7 @@
       <p>商品名</p>
     </div>
     <div class = "col-4">
-      <%= f.text_field :name, class: 'form-control' %>
+      <%= f.text_field :name, placeholder: "商品名", class: 'form-control' %>
     </div>
   </div>
   <div class = "row">
@@ -29,7 +29,7 @@
       <p>商品説明</p>
     </div>
     <div class = "col-4">
-      <%= f.text_area :body, class: 'form-control' %>
+      <%= f.text_area :body, placeholder: "ここに説明文を記述します", class: 'form-control' %>
     </div>
   </div>
   <div class = "row">
@@ -45,7 +45,7 @@
       税抜価格
     </div>
     <div class = "col-4">
-      <%= f.text_area :non_tax_price, class: 'form-control' %>
+      <%= f.text_field :non_tax_price, placeholder: "1000", class: 'form-control' %>
     </div>
   </div>
   <div class = "row">
