--- a/app/views/admin/genres/_genre_index.html.erb
+++ b/app/views/admin/genres/_genre_index.html.erb
@@ -3,7 +3,7 @@
    <%= form_with model: genre, url: admin_genres_path, local: false do |f| %>
       <div class="form_group">
         <%= f.label :name %>
-        <%= f.text_field :name %>
+        <%= f.text_field :name, placeholder: "ジャンル名" %>
       </div>
       <div class="form_group">
         <%= f.submit "新規登録", class: "btn btn-success" %>
