--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -3,17 +3,17 @@
 <%= form_with model: @address, url: public_addresses_path, method: :post, local:true do |f| %>
  <div class="field">
     <label>郵便番号</label>
-    <%= f.text_field :postal_code %>
+    <%= f.text_field :postal_code, placeholder: "0000000" %>
   </div>
 
   <div class="field">
     <label>住所</label>
-    <%= f.text_field :address %>
+    <%= f.text_field :address, placeholder: "東京都渋谷区代々木神園町" %>
   </div>
 
   <div class="field">
     <label>宛名</label>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, placeholder: "令和道子" %>
   </div>
   <%= f.hidden_field :customer_id, :value => current_customer.id %>
   <div class="field">
