--- a/app/views/public/orders/conform.html.erb
+++ b/app/views/public/orders/conform.html.erb
@@ -1,7 +1,1 @@
-<h1>注文確定ページ</h1>
-ご注文ありがとうございました。
-　　　　　　　　荒　巻　ス　カ　ル　チ　ノ　フ</br>
-　　　　　　　　　 _,,..,,,,_</br>
-　　　　　　　 　/ ,' 3　 `ヽｰっ</br>
-　　　　　　　　 l　　 ⊃　⌒_つ</br>
-　　　　　 　　　 `'ｰ---‐'''''"</br>
+<h1>ご注文ありがとうございました!</h1>
