--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -32,3 +32,9 @@
   <%= order_item.quantity %>
   <%= subtotal(order_item.quantity) %></br>
 <% end %>
+
+　　　　　　　　荒　巻　ス　カ　ル　チ　ノ　フ</br>
+　　　　　　　　　 _,,..,,,,_</br>
+　　　　　　　 　/ ,' 3　 `ヽｰっ</br>
+　　　　　　　　 l　　 ⊃　⌒_つ</br>
+　　　　　 　　　 `'ｰ---‐'''''"</br>
