--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,2 +1,68 @@
-<h1>Admin::Customers#edit</h1>
-<p>Find me in app/views/admin/customers/edit.html.erb</p>
+<div class='container'>
+  <div class='row'>
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h3><%= @customer.family_name %><%= @customer.first_name %>さんの会員情報</h3>
+
+      <% if @customer.errors.any? %>
+        <%= @customer.errors.count %>件のエラーが発生しました
+        <ul>
+          <% @customer.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      <% end %>
+
+      <%= form_with model: @customer, url: admin_customer_path, local:true do |f| %>
+        <div class="form-group">
+          <div class="form-inline">
+            <label>氏名</label>
+            <%= f.text_field :family_name, class: "form-control" %>
+            <%= f.text_field :first_name, class: "form-control" %>
+          </div>
+        </div>
+      <div class="form-group">
+        <div class="form-inline">
+          <label>フリガナ</label>
+          <%= f.text_field :family_kana, class: "form-control" %>
+          <%= f.text_field :first_kana, class: "form-control" %>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="form-inline">
+          <label>郵便番号</label>
+          <%= f.text_field :postal_code, class: "form-control" %>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="form-inline">
+          <label>住所</label>
+          <%= f.text_field :address, class: "form-control" %>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="form-inline">
+          <label>電話番号</label>
+          <%= f.text_field :phone_number, class: "form-control" %>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="form-inline">
+          <label>メールアドレス　</label>
+          <%= f.text_field :email, class: "form-control" %>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="form-inline">
+          <%= f.radio_button :is_active, "true" %>
+          <%= f.label :is_active, "有効" %>
+
+          <%= f.radio_button :is_active, "false" %>
+          <%= f.label :is_active, "退会" %>
+        </div>
+      </div>
+      <div class="form-group">
+          <%= f.submit "変更内容を保存", class: "btn btn-success" %>
+      </div>
+    <% end %>
+  </div>
+</div>
