--- a/app/views/public/items/about.html.erb
+++ b/app/views/public/items/about.html.erb
@@ -1,14 +1,21 @@
-<div class = "container">
-  <div class = "row">
-    <div class = "col">
-      <h1>About</h1>
-      <p >
-        ながのCAKEは全国発送可能なケーキ屋さんです。<br>
-        お子様からお年寄りまでお召し上がりいただけるよう、<br>
-        様々なバリエーションをご用意しております。<br>
-        また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
-        ぜひご注文ください。
-      </p>
-    </div>
+<div class = "row">
+  <div class = "col">
+    <h1 class="text-center" >About</h1>
+  </div>
+</div>
+<div class = "row">
+  <div class = "col">
+    <p class="text-center" >
+      ながのCAKEは全国発送可能なケーキ屋さんです。<br>
+      お子様からお年寄りまでお召し上がりいただけるよう、<br>
+      様々なバリエーションをご用意しております。<br>
+      また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
+      ぜひご注文ください。
+    </p>
+  </div>
+</div>
+<div class = "row">
+  <div class = "col d-flex">
+    <%= image_tag "top_image.jpg", class: "align-self-center mx-auto"  %>
   </div>
 </div>
