--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
   <body>
     <%= render "layouts/header" %>
       <main>
-        <%= yield %>
+        <div class = "container mt-5">
+          <%= yield %>
+        </div>
       </main>
     <%= render "layouts/footer" %>
   </body>
