--- a/app/views/public/orders/check.html.erb
+++ b/app/views/public/orders/check.html.erb
@@ -1,2 +1,38 @@
 <h1>注文情報最終確認画面</h1>
-注文確定ボタン
+<% @cart_items.each do |cart_item| %>
+<% item = Item.find(cart_item) %>
+注文情報確認
+    商品名
+    <%= item.name %>
+    単価(税込)
+    <%= with_tax_price(item.non_tax_price) %>
+    数量
+    <%= cart_item.quantity %>
+    小計
+    <%= subtotal(cart_item.quantity) %>
+<% end %>
+送料
+<%= @order.postage %>
+商品合計
+<%= total_price(@cart_items)%>
+請求金額
+<%= @order.total_payment%>
+支払方法
+<%= @order.payment_method %>
+お届け先
+<%= @order.postal_code %><%= @order.address %>
+<%= @order.name %>
+
+<%= link_to "注文確定ボタン", public_mypage_path %>
+
+<!--注文情報作成フォーム-->
+<%= form_with model: @order, url: public_orders_path do |f| %>
+    <%= f.hidden_field :customer_id,    value: current_customer.id   %>
+    <%= f.hidden_field :postal_code,    value: @order.postal_code    %>
+    <%= f.hidden_field :address,        value: @order.address        %>
+    <%= f.hidden_field :name,           value: @order.name           %>
+    <%= f.hidden_field :payment_method, value: @order.payment_method %>
+    <%= f.hidden_field :trade_status,   value: @order.trade_status   %>
+    <%= f.hidden_field :total_payment,  value: @order.total_payment  %>
+    <%= f.hidden_field :postage,        value: @order.postage        %>
+<% end %>
