--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,19 +1,33 @@
 <h1>ユーザー注文履歴一覧</h1>
-<% @orders.each do |order| %>
-注文日</br>
-<%= order.created_at%></br>
-郵便番号/住所/宛名</br>
-<%= order.postal_code %>
-<%= order.address %>
-<%= order.name %></br>
-
-<% order_items = OrderItem.where(order_id: order.id) %>
-    注文商品
-    <% order_items.each do |order_item| %>
-    <% item = Item.find(order_item.item_id)%>
-    <%= item.name %>
-    <% end %></br>
-注文ステータス
-<%= order.trade_status %></br>
-<%= link_to "表示する",public_order_path(order) %>
-<% end %>
+<table class='table'>
+  <thead>
+    <tr>
+     <th>注文日</th>
+     <th>配送先</th>
+     <th>注文商品</th>
+     <th>支払金額</th>
+     <th>ステータス</th>
+     <th>注文詳細</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @orders.each do |order| %>
+    <tr>
+     <td><%= order.created_at %></td>
+     <td><%= order.postal_code %></br>
+         <%= order.address %></br>
+         <%= order.name %>
+     </td>
+     <td><% order_items = OrderItem.where(order_id: order.id) %>
+         <% order_items.each do |order_item| %>
+         <% item = Item.find(order_item.item_id)%>
+         <%= item.name %></br>
+         <% end %>
+     </td>
+     <td><%= order.total_payment %></td>
+     <td><%= order.trade_status %></td>
+     <td><%= link_to "表示する",public_order_path(order) %></td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
