--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,40 +1,61 @@
 <h1>注文履歴詳細</h1>
-注文情報</br>
-  注文日
-  <%= @order.created_at %></br>
-  配送先</br>
-    郵便番号
-    <%= @order.postal_code %></br>
-    住所
-    <%= @order.address %></br>
-    宛名
-    <%= @order.name %></br>
-  支払い方法
-  <%= @order.payment_method %></br>
-  ステータス
-  <%= @order.trade_status %></br>
-
-請求情報</br>
-  商品合計
-  <%= total_price(@order_items) %></br>
-  配送料
-  <%= @order.postage %></br>
-  ご請求額
-  <%= @order.total_payment.to_s(:delimited) %></br>
-
-注文内容</br>
-商品(画像なし)//単価（税込）//個数//小計</br>
-
-<% @order_items.each do |order_item| %>
-<% item = Item.find(order_item.item_id) %>
-  <%= item.name %>
-  <%= with_tax_price(order_item.price) %>
-  <%= order_item.quantity %>
-  <%= subtotal(order_item.quantity) %></br>
-<% end %>
-
-　　　　　　　　荒　巻　ス　カ　ル　チ　ノ　フ</br>
-　　　　　　　　　 _,,..,,,,_</br>
-　　　　　　　 　/ ,' 3　 `ヽｰっ</br>
-　　　　　　　　 l　　 ⊃　⌒_つ</br>
-　　　　　 　　　 `'ｰ---‐'''''"</br>
+<h2>注文情報</h2>
+<table class='table'>
+  <tr>
+    <th>注文日</th>
+    <td><%= @order.created_at %></td>
+  </tr>
+  <tr>
+    <th>配送先</th>
+    <td>
+      <%= "〒"+ @order.postal_code %></br>
+      <%= @order.address %></br>
+      <%= @order.name %>
+    </td>
+  </tr>
+  <tr>
+    <th>支払方法</th>
+    <td><%= @order.payment_method %></td>
+  </tr>
+  <tr>
+    <th>ステータス</th>
+    <td><%= @order.trade_status %></td>
+  </tr>
+</table>
+<h2>請求情報</h2>
+<table class='table'>
+  <tr>
+    <th>商品合計</th>
+    <td><%= total_price(@order_items) %></td>
+  </tr>
+  <tr>
+    <th>配送料</th>
+    <td><%= @order.postage %></td>
+  </tr>
+  <tr>
+    <th>ご請求額</th>
+    <td><%= @order.total_payment.to_s(:delimited) %></td>
+  </tr>
+</table>
+<h2>注文内容</h2>
+<table class='table'>
+  <thead>
+    <tr>
+      <th>商品</th>
+      <th>単価(税込)</th>
+      <th>個数</th>
+      <th>小計</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @order_items.each do |order_item| %>
+    <% item = Item.find(order_item.item_id) %>
+    <tr>
+      <td><%= item.name %></td>
+      <td><%= with_tax_price(order_item.price) %></td>
+      <td><%= order_item.quantity %></td>
+      <td><%= subtotal(order_item.quantity) %></td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
