--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,22 +1,31 @@
 <h1>注文情報入力画面</h1>
 
-<%= form_with model: @order, url: new_public_order_path do |f| %>
-<%= f.hidden_field :customer_id, value: current_customer.id %>
+<%= form_with model: @order, url: public_orders_check_path, method: :post do |f| %>
+  <%= f.hidden_field :customer_id, value: current_customer.id %>
 <h5>支払い方法</h5>
-<%= f.radio_button :payment_method, 0 %>
-<%= f.radio_button :payment_method, 1 %>
+<!--これほんとにこんなに書かなきゃいけないの？params見て確かめる。-->
+  <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
+  <%= f.label :payment_method, Order.payment_methods_i18n[:credit_card] %></br>
+  <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
+  <%= f.label :payment_method, Order.payment_methods_i18n[:transfer] %>
 
-お届け先
-  ご自身の住所
-    <%= f.radio_button :address_info, 0 %>
-  登録済住所から選択
-    <%= f.radio_button :address_info, 1 %>
-    <%= f.collection_select :address, current_customer.addresses, :id, :view_address_info %>
-  新規登録
-  <%= f.radio_button :address_info, 2 %>
-    <%= form_with model: @address, url: new_public_order_path do |n| %>
-      <%= n.text_field :postal_code %>
-      <%= n.text_field :address %>
-      <%= n.text_field :name %>
-    <% end %>
+<h5>お届け先</h5>
+    <%= f.radio_button :address_info, "0" %>
+      <%= f.label :address_info, "ご自身の住所" %></br>
+      <%= f.label :address_info, "〒" + current_customer.postal_code + current_customer.address %></br>
+      <%= f.label :address_info, current_customer.family_name + current_customer.first_name %></br>
+
+    <%= f.radio_button :address_info, "1" %>
+      <%= f.label :address_info, "登録済住所から選択" %></br>
+      <%= f.collection_select :address, current_customer.addresses, :id, :view_address_info %></br>
+
+    <%= f.radio_button :address_info, "2" %>
+      <%= f.label :address_info, "新規登録" %></br>
+          <%= f.label :postal_code, "郵便番号(ハイフンなし)" %>
+          <%= f.text_field :postal_code %></br>
+          <%= f.label :address, "住所" %>
+          <%= f.text_field :address %></br>
+          <%= f.label :name, "宛名" %>
+          <%= f.text_field :name %></br>
+    <%= f.submit "確定画面へ進む", class: "btn btn-primary" %>
 <% end %>
