--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -17,7 +17,8 @@
 
     <%= f.radio_button :address_info, "1" %>
       <%= f.label :address_info, "登録済住所から選択" %></br>
-      <%= f.collection_select :address, current_customer.addresses, :id, :view_address_info %></br>
+      <!--旧記述< %= f.collection_select :address, current_customer.addresses, :id, :view_address_info %></br>-->
+      <%= f.select :address_id, options_from_collection_for_select(@addresses, :id, :view_address_info) %></br>
 
     <%= f.radio_button :address_info, "2" %>
       <%= f.label :address_info, "新規登録" %></br>
