[fix].to_s(:delimited)

--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -24,7 +24,7 @@
          <%= item.name %></br>
          <% end %>
      </td>
-     <td><%= order.total_payment %></td>
+     <td><%= order.total_payment.to_s(:delimited) %></td>
      <td><%= order.trade_status %></td>
      <td><%= link_to "表示する",public_order_path(order) %></td>
     </tr>
