--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <%= render "layouts/header" %>
       <main>
-        <div class = "container mt-5">
+        <div class = "container-fluid mt-5">
           <%= yield %>
         </div>
       </main>
