--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,90 +1,92 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar navbar-light gnav" style="background-color: #f2a0a1;">
     <div class="container">
-      <span>ながのCAKE</span>
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <span>ながのCAKE</span>
         <ul class="navbar-nav ml-auto">
         <% if customer_signed_in? %>
-          <div class="d-flex align-items-center">
+          <div class="d-flex align-items-center col">
             ようこそ<%= "#{current_customer.family_name}" %>さん
           </div>
-          <li>
+          <li class="nav-item">
             <%= link_to public_mypage_path, class: "nav-link text-light" do %>
               マイページ
             <% end %>
           </li>
-          <li>
+          <li class="nav-item">
             <%= link_to public_items_path, class: "nav-link text-light" do %>
               商品一覧
             <% end %>
           </li>
-          <li>
+          <li class="nav-item">
             <%= link_to public_cart_items_path, class: "nav-link text-light" do %>
               カート
             <% end %>
           </li>
-          <li>
+          <li class="nav-item">
             <%= link_to destroy_customer_session_path, method: :delete, class: "nav-link text-light" do %>
               ログアウト
             <% end %>
           </li>
         <% elsif admin_signed_in? %>
-          <li>
+          <li class="nav-item">
             <%= link_to admin_items_path, class: "nav-link text-light" do %>
               商品一覧
             <% end %>
           </li>
-          <li>
+          <li class="nav-item">
             <%= link_to admin_customers_path, class: "nav-link text-light" do %>
               会員一覧
             <% end %>
           </li>
-          <li>
+          <li class="nav-item">
             <%= link_to admin_path, class: "nav-link text-light" do %>
               注文履歴一覧
             <% end %>
           </li>
-          <li>
+          <li class="nav-item">
             <%= link_to admin_genres_path, class: "nav-link text-light" do %>
               ジャンル一覧
             <% end %>
           </li>
-          <li>
+          <li class="nav-item">
             <%= link_to destroy_admin_session_path, method: :delete, class: "nav-link text-light" do %>
               ログアウト
             <% end %>
           </li>
         <% else %>
-          <li>
+          <li class="nav-item">
             <%= link_to public_about_path, class: "nav-link text-light" do %>
               About
             <% end %>
           </li>
-          <li>
+          <li class="nav-item">
             <%= link_to public_items_path, class: "nav-link text-light" do %>
               商品一覧
             <% end %>
           </li>
-          <li>
+          <li class="nav-item">
             <%= link_to new_customer_registration_path, class: "nav-link text-light" do %>
               新規登録
             <% end %>
           </li>
-          <li>
+          <li class="nav-item">
             <%= link_to new_customer_session_path, class: "nav-link text-light" do %>
               ログイン
             <% end %>
           </li>
         <% end %>
         </ul>
-        <%= form_with(url: public_root_path, local: true, method: :get, class: "rootpageSearchForm") do |form| %>
-          <%= form.text_field :keyword, placeholder: "Search", class: "rootpageSearchForm__content" %>
-          <%= form.submit "検索", class: "rootpageSearchForm__bottum" %>
-        <% end %>
+        <ul class="navbar-nav mr-auto">
+         <li class="nav-item">
+              <%= form_with class: "rootpageSearchForm" do |form| %>
+                <%= form.text_field :keyword, placeholder: "Search", id: 'Search_Form', class: "form-control mr-sm-2" %>
+                <%= form.submit "Search", class: "btn btn-outline-success my-2 my-sm-0" %>
+              <% end %>
+         </li>
+        </ul>
+        </div>
       </div>
     </div>
   </nav>
