[Add]fix-public-address

--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,9 +1,14 @@
-マイページ
+<div class="row">
+  <div class="col-sm-3 d-flex justify-content-center">
+    <h3 class = "bg-light" style="background-color: #d3d3d3;"><b>マイページ</b></h3>
+  </div>
+</div>
+<br>
 <table>
   <tbody>
     <tr>
       <td>
-        <h5>登録情報</h5>
+        <h5><b>登録情報</b></h5>
       </td>
       <td>
         <%= link_to edit_public_customers_path, class: "btn btn-success" do %>
@@ -13,41 +18,41 @@
     </tr>
   </tbody>
 </table>
-
+<br>
 <table class="table table-bordered">
   <tbody>
     <tr>
-      <td>氏名</td>
+      <td style="background-color: #d3d3d3;">氏名</td></div>
       <td><%= @customer.family_name %>　<%= @customer.first_name %></td>
     </tr>
     <tr>
-      <td>カナ</td>
+      <td style="background-color: #d3d3d3;">カナ</td>
       <td><%= @customer.family_kana %>　<%= @customer.first_kana %></td>
     </tr>
     <tr>
-      <td>郵便番号</td>
+      <td style="background-color: #d3d3d3;">郵便番号</td>
       <td><%= @customer.postal_code %></td>
     </tr>
     <tr>
-      <td>住所</td>
+      <td style="background-color: #d3d3d3;">住所</td>
       <td><%= @customer.address %></td>
     </tr>
     <tr>
-      <td>電話番号</td>
+      <td style="background-color: #d3d3d3;">電話番号</td>
       <td><%= @customer.phone_number %></td>
     </tr>
     <tr>
-      <td>メールアドレス</td>
+      <td style="background-color: #d3d3d3;">メールアドレス</td>
       <td><%= @customer.email %></td>
     </tr>
   </tbody>
 </table>
-
+<br>
 <table>
   <tbody>
     <tr>
       <td>
-        <h5>配送先</h5>
+        <h5><b>配送先</b></h5>
       </td>
       <td>
         <%= link_to public_addresses_path, class: "btn btn-primary" do %>
@@ -56,7 +61,9 @@
       </td>
     </tr>
     <tr>
-      <td><h5>注文履歴</h5></td>
+      <td>
+        <h5><b>注文履歴</b></h5>
+      </td>
       <td>
         <%= link_to public_orders_path, class: "btn btn-primary" do %>
           一覧を見る
