--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
 
   <body>
     <%= render "layouts/header" %>
+     <%= flash[:notice] %>
+     <%= flash[:error] %>
       <main>
         <div class = "container mt-5">
           <%= yield %>
