--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,29 +1,42 @@
-<h3>配送先登録/一覧</h3>
-<%= flash[:notice] %>
-<%= form_with model: @address, url: public_addresses_path, method: :post, local:true do |f| %>
- <div class="field">
-    <label>郵便番号</label>
-    <%= f.text_field :postal_code, placeholder: "0000000" %>
+<div class="row">
+  <div class="col-sm-3 d-flex justify-content-center">
+    <h3 class = "bg-light" style="background-color: #d3d3d3;"><b>配送先登録/一覧</b></h3>
   </div>
+</div>
+<div class="row">
+  <div class="col-sm">
+    <table>
+      <tbody>
+        <%= form_with model: @address, url: public_addresses_path, method: :post, local:true do |f| %>
+        <tr><div class="form-group">
+          <th><%= f.label :postal_code, "郵便番号(ハイフンなし)" %></th>
+          <td><%= f.text_field :postal_code, placeholder: "0000000", class: "form-control" %></td>
+          <td></td>
+        </div></tr>
 
-  <div class="field">
-    <label>住所</label>
-    <%= f.text_field :address, placeholder: "東京都渋谷区代々木神園町" %>
-  </div>
+        <tr><div class="form-group">
+          <th><%= f.label :address, "住所" %></th>
+          <td><%= f.text_field :address, placeholder: "東京都渋谷区代々木神園町", class: "form-control" %></td>
+          <td></td>
+        </div></tr>
 
-  <div class="field">
-    <label>宛名</label>
-    <%= f.text_field :name, placeholder: "令和道子" %>
+        <tr><div class="form-group">
+          <th><%= f.label :name, "宛名" %></th>
+          <td><%= f.text_field :name, placeholder: "令和道子", class: "form-control" %></td>
+              <%= f.hidden_field :customer_id, :value => current_customer.id %>
+          <td><%= f.submit "新規登録", class: "btn btn-success" %></td>
+        </div></tr>
+        <% end %>
+      </tbody>
+    </table>
   </div>
-  <%= f.hidden_field :customer_id, :value => current_customer.id %>
-  <div class="field">
-    <%= f.submit "新規登録", class: "btn btn-success" %>
-  </div>
-<% end %>
+</div>
+
+<br>
 
 <table class="table table-bordered">
   <tbody>
-    <tr>
+    <tr style="background-color: #d3d3d3;">
       <td>郵便番号</td>
       <td>住所</td>
       <td>宛名</td>
