--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,7 +1,10 @@
-<div class='container'>
-  <div class='row'>
-    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-    <h2>会員情報編集</h2>
+<div class="row">
+  <div class="col-sm-3 d-flex justify-content-center">
+    <h3 class = "bg-light" style="background-color: #d3d3d3;"><b>会員情報編集</b></h3>
+  </div>
+</div>
+<div class='row'>
+  <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
 
     <% if @customer.errors.any? %>
       <%= @customer.errors.count %>件のエラーが発生しました
@@ -12,53 +15,49 @@
       </ul>
     <% end %>
 
+<table>
+  <tbody>
     <%= form_with model: @customer, url: public_customers_path, local:true do |f| %>
-      <div class="form-group">
-        <div class="form-inline">
-          <label>氏名　</label>
+      <tr><div class="form-group">
+        <td><%= f.label :family_name, "氏名" %></td>
+        <td>
           <%= f.text_field :family_name, class: "form-control" %>
           <%= f.text_field :first_name, class: "form-control" %>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="form-inline">
-          <label>フリガナ　</label>
+        </td>
+      </div></tr>
+      <tr><div class="form-group">
+        <td><%= f.label :family_kana, "フリガナ" %></td>
+        <td>
           <%= f.text_field :family_kana, class: "form-control" %>
           <%= f.text_field :first_kana, class: "form-control" %>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="form-inline">
-          <label>郵便番号　</label>
-          <%= f.text_field :postal_code, class: "form-control" %>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="form-inline">
-          <label>住所　</label>
-          <%= f.text_field :address, class: "form-control" %>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="form-inline">
-          <label>電話番号　</label>
-          <%= f.text_field :phone_number, class: "form-control" %>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="form-inline">
-          <label>メールアドレス　</label>
-          <%= f.text_field :email, class: "form-control" %>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="form-inline">
-          <%= f.submit "変更内容を保存", class: "btn btn-success" %>
+        </td>
+      </div></tr>
+      <tr><div class="form-group">
+        <td><%= f.label :postal_code, "郵便番号" %></td>
+        <td><%= f.text_field :postal_code, class: "form-control" %></td>
+      </div></tr>
+      <tr><div class="form-group">
+        <td><%= f.label :address, "住所" %></td>
+        <td><%= f.text_field :address, class: "form-control" %></td>
+      </div></tr>
+      <tr><div class="form-group">
+        <td><%= f.label :phone_number, "電話番号" %></td>
+        <td><%= f.text_field :phone_number, class: "form-control" %></td>
+      </div></tr>
+      <tr><div class="form-group">
+        <td><%= f.label :email, "メールアドレス" %></td>
+        <td><%= f.text_field :email, class: "form-control" %></td>
+      </div></tr>
+      <tr><div class="form-group">
+        <td><%= f.submit "変更内容を保存", class: "btn btn-success" %></td>
+        <td>
           <%= link_to public_customer_confirmation_path, class: "btn btn-danger" do %>
             退会する
           <% end %>
-        </div>
-      </div>
+        </td>
+      </div></tr>
     <% end %>
-  </div>
+  </tbody>
+</table>
+</div>
 </div>
