[fix]admin-session-layout

--- a/app/views/admin/genres/_genre_index.html.erb
+++ b/app/views/admin/genres/_genre_index.html.erb
@@ -1,14 +1,16 @@
  <div id="genre_all">
-  <h2>ジャンル一覧・追加</h2>
-   <%= form_with model: genre, url: admin_genres_path, local: false do |f| %>
-      <div class="form_group">
-        <%= f.label :name %>
+  <div class="col-sm-3">
+    <h5 class="text-center" style="background-color: #d3d3d3;">ジャンル一覧・追加</h5>
+  </div>
+    <%= form_with model: genre, url: admin_genres_path, local: false do |f| %>
+      <div class="form_group row  my-4">
+        <%= f.label :name, "ジャンル名", class: "col-sm-2 mb-0" %>
         <%= f.text_field :name, placeholder: "ジャンル名" %>
       </div>
-      <div class="form_group">
+      <div class="form_group row">
         <%= f.submit "新規登録", class: "btn btn-success" %>
       </div>
-   <% end %>
+    <% end %>
 
   <table class='table'>
     <thead>
