--- a/app/views/public/cart_items/_all_cart_items.html.erb
+++ b/app/views/public/cart_items/_all_cart_items.html.erb
@@ -20,7 +20,7 @@
         <td><%= with_tax_price(item.non_tax_price) %></td>
         <td>
           <%= form_with url: public_cart_item_path(cart_item), method: :patch, local: false do |f| %>
-          <!--ここわからなすぎて死ねる、きたね〜〜〜〜〜〜〜〜〜〜〜〜〜。(1..20).to_aをハッシュにする？-->
+          <!-(1..20).to_aをハッシュにする？-->
           <%= f.select :quantity, [[1,1],[2,2],[3,3],[4,4],[5,5],[6,6],[7,7],[8,8],[9,9],[10,10],[11,11],[12,12],[13,13],[14,14],[15,15],[16,16],[17,17],[18,18],[19,19],[20,20]], selected: "#{cart_item.quantity}" %>
           <%= f.submit "変更", class: "btn btn-success"%>
           <% end %>
