--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -17,9 +17,10 @@
         </thead>
         <tbody>
           <% @orders.each do |order| %>
+
             <tr>
-              <td><%= link_to order.created_at.strftime("%Y-%m-%d %H:%M:%S"),admin_order_path(order.id) %></td>
-              <td><%= order.name %></td>
+              <td><%= link_to order.created_at.strftime("%Y/%m/%d %H:%M:%S"),admin_order_path(order.id) %></td>
+              <td><%= order.customer.family_name %><%= order.customer.first_name %></td>
               <td><%= total_order_quantity(order.order_items) %></td>
               <td><%= order.trade_status_i18n %></td>
             </tr>
