--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,17 +1,19 @@
 <div class = "container">
-  <div class = "row">
-    <div class = "col">
+  <div class = "row m-3">
+    <div class = "col-sm-10">
       <h3>商品一覧</h3>
     </div>
-    <div class = "col">
-      <%= link_to "+", new_admin_item_path, class: 'btn btn-info rounded-circle p-0' %>
+    <div class = "col-2">
+      <%= link_to new_admin_item_path, class: 'shadow btn btn-light rounded-circle p-0', style: "width:3rem;height:3rem;" do %>
+       <p style= "margin-bottom: 10px;font-size: 30px;" >+</p>
+      <% end %>
     </div>
   </div>
   <div class = "row">
     <div class = "col">
-      <table class='table table-hover table-inverse'>
+      <table class='table table-hover table-inverse table-borderless'>
         <thead>
-          <tr>
+          <tr class="table-active">
             <th>商品ID</th>
             <th>商品名</th>
             <th>税抜価格</th>
@@ -21,10 +23,10 @@
         </thead>
         <tbody>
           <% @items.each do |item| %>
-            <tr>
+            <tr class = "b-0">
               <td><%= item.id %></td>
               <td><%= link_to item.name,admin_item_path(item.id) %></td>
-              <td><%= item.non_tax_price %></td>
+              <td><%= item.non_tax_price.to_s(:delimited) %></td>
               <td><%= item.genre.name %></td>
               <td>
                 <% if item.is_selling == true %>
@@ -40,4 +42,4 @@
     </div>
   </div>
   <%= paginate @items %>
-</div> 
+</div>
