--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,21 +1,32 @@
 <div class = "container">
   <div class = "row">
     <div class = "col-3">
-      <p>ジャンル検索</p>
+    <table frame = "box">
+      <thead>
+        <tr>
+          <th style="border: 1px solid black;">ジャンル一覧</th>
+        </tr>
+      </thead>
+      <tbody>
       <% @genres.each do |genres| %>
-      <p><%= genres.name %></p>
+        <tr>
+          <td><%= genres.name %></td>
+        </tr>
       <% end %>
-    </div>
+      </tbody>
+    </table>
+  </div>
     <div class = "col-9">
       <h2>商品一覧</h2><h3>(全<%= Item.all.count %>件中<%= @items.count %>件)</h3>
       <div class = "row">
       <% @items.each do |item| %>
         <div class = "col-3">
-        <% if item.item_image.attached? %>
-          <%= image_tag item.item_image, size: "200x200" %>
-        <% else %>
-          <%= image_tag 'no_image', size: "200x200" %>
-          </%>
+        <%= link_to public_item_path(item.id) do %>
+          <% if item.item_image.attached? %>
+            <%= image_tag item.item_image, size: "200x200" %>
+          <% else %>
+            <%= image_tag 'no_image', size: "200x200" %>
+          <% end %>
         <% end %>
           <p><%= link_to item.name, public_item_path(item.id) %></p>
           <p>￥<%= with_tax_price(item.non_tax_price) %></p>
